clusters/k3s/apps/monitoring/helm-grafana-prometheus-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
